# MonoKickstart

./: CMakeLists.txt  README  binreloc.c  fixDylibs.sh  kick.c
.github/workflows/: ci.yaml
patches/: corefx-MONO_FORCE_COMPAT-patch-from-OpenBSD.patch  corefx-MONO_IOMAP.patch  corert-MONO_FORCE_COMPAT-patch-from-OpenBSD.patch  mono-zlib-ng-fix.patch
precompiled/: Kick
